Java 11 + log GC